Main text changes added to the home page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Miguel Echeverria - C++ Generalist Programmer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Miguel Echeverria</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Miguel Echeverria</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>C++ Generalist Programmer <a href="https://www.linkedin.com/in/miguel-echeverria-majadas/">(LinkedIn)</a></p>
 						</div>
 					</section>
 
@@ -57,8 +57,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Shadow Racer</h2>
+										<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. It was published on Steam in May 2022.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -69,8 +69,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Seavilizations</h2>
+										<p>Seavilizations is a 3D multiplayer boat-combat game in which all the players have to fight against each other to obtain a certain number of chalices so that they can escape from the map to win.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -81,8 +81,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Entails</h2>
+										<p>Entails is a 2D platformer, shooter game where the player must disinfect a human body. The player must go through parts of the human body, fighting both the different viruses and the body's defenses.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -91,31 +91,31 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Projects</h2>
+									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Animation Engine + Cloth Simulation</h3>
+											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Ant Colony Simulation</h3>
+											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Space Partitioning</h3>
+											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Networked Asteroids Game</h3>
+											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
@@ -158,7 +158,7 @@
 									Nashville, TN 00000-0000
 								</li>
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon solid fa-envelope"><a href="#">m.echeverriamajadas@gmail.com</a></li>
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
