Most text changes added to the home page, as well as some images.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ClothPlusAnim.jpg" alt="" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special">Learn more</a>
