--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><!--<span class="icon fa-gem"></span> --></div>
 							<h2>Miguel Echeverria</h2>
 							<p>C++ Generalist Programmer <a href="https://www.linkedin.com/in/miguel-echeverria-majadas/">(LinkedIn)</a></p>
 						</div>
@@ -52,10 +52,18 @@
 				<!-- Wrapper -->
 					<section id="wrapper">
 
+						<!-- About me -->
+						<section id="about-me" class="wrapper alt style1">
+							<div class="inner">
+								<h2 class="major">About me</h2>
+								<p>Hello! I am a passionate and driven C++ game programmer, who is interested in working on either gameplay, tools or engine programming. This webpage showcases some of the games and personal projects I have worked on so far. Hope you enjoy! :)</p>
+							</div>
+						</section>
+
 						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="my-image-left"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. It was published on Steam in May 2022.</p>
@@ -65,9 +73,9 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
+							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="my-image-right"><img src="images/SeavilizationsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>Seavilizations is a 3D multiplayer boat-combat game in which all the players have to fight against each other to obtain a certain number of chalices so that they can escape from the map to win.</p>
@@ -77,9 +85,9 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
+							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="my-image-left"><img src="images/EntailsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>Entails is a 2D platformer, shooter game where the player must disinfect a human body. The player must go through parts of the human body, fighting both the different viruses and the body's defenses.</p>
@@ -101,19 +109,19 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/AntColonySim.jpg" alt="" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Raytracing.png" alt="" /></a>
 											<h3 class="major">Space Partitioning</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/NetAsteroids.png" alt="" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special">Learn more</a>
