Social media links added in about, and hover animations finished.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/Website.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -45,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"><!--<span class="icon fa-gem"></span> --></div>
 							<h2>Miguel Echeverria</h2>
-							<p>C++ Generalist Programmer <a href="https://www.linkedin.com/in/miguel-echeverria-majadas/">(LinkedIn)</a></p>
+							<p>C++ Generalist Programmer</p>
 						</div>
 					</section>
 
@@ -56,14 +57,19 @@
 						<section id="about-me" class="wrapper alt style1">
 							<div class="inner">
 								<h2 class="major">About me</h2>
-								<p>Hello! I am a passionate and driven C++ game programmer, who is interested in working on either gameplay, tools or engine programming. This webpage showcases some of the games and personal projects I have worked on so far. Hope you enjoy! :)</p>
+								<p>Hello! I am a passionate and driven C++ game programmer, who is interested in working on either gameplay, tools or engine programming.</p>
+								<p>This webpage was created with html, css, javascript and sass, and it showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
+								<p>For any enquiries, don't hesitate and send me an email to <b>m.echeverriamajadas@gmail.com</b>. Also, check out my LinkedIn, Github or Youtube!</p>
+								<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
+								<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
+								<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
 							</div>
 						</section>
 
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="#" class="my-image-left"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
+									<a href="#" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. It was published on Steam in May 2022.</p>
@@ -75,7 +81,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="#" class="my-image-right"><img src="images/SeavilizationsBanner.jpg" alt="" /></a>
+									<a href="#" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>Seavilizations is a 3D multiplayer boat-combat game in which all the players have to fight against each other to obtain a certain number of chalices so that they can escape from the map to win.</p>
@@ -87,7 +93,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="#" class="my-image-left"><img src="images/EntailsBanner.jpg" alt="" /></a>
+									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>Entails is a 2D platformer, shooter game where the player must disinfect a human body. The player must go through parts of the human body, fighting both the different viruses and the body's defenses.</p>
@@ -103,25 +109,25 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/ClothPlusAnim.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.jpg" alt="" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/AntColonySim.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/AntColonySim.jpg" alt="" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Raytracing.png" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/Raytracing.png" alt="" /></a>
 											<h3 class="major">Space Partitioning</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/NetAsteroids.png" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/NetAsteroids.png" alt="" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special">Learn more</a>
