Header navigation menu finished. Games' descriptions improved now with icons.

--- a/elements.html
+++ b/elements.html
@@ -101,10 +101,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</ol>
 												<h4>Icons</h4>
 												<ul class="icons">
-													<li><a href="#" class="icon brands fa-youtube"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon regular fa-bookmark"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+													<li><a href="#" class="icon regular fa-check-circle"><span class="label">Twitter</span></a></li>
+													<li><a href="#" class="icon regular fa-clock"><span class="label">Facebook</span></a></li>
+													<li><a href="#" class="icon solid fa-gas-pump"><span class="label">Instagram</span></a></li>
+													<li><a href="#" class="icon brands fa-steam"><span class="label">Github</span></a></li>
 												</ul>
 											</div>
 										</div>
