--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
 							<a class="header icon brands fa-youtube" id="red-icon" href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" target="_blank"></a>
 						</div>
 						
-						<nav id="header-nav-menu"> <!-- <a href="#menu">Menu</a> -->
-							<a href="#page-wrapper">Home</a>
-							<a href="#one">Games</a>
-							<a href="elements.html">Projects</a>
-							<a href="#footer">Contact</a>
+						<nav class="header-nav-menu"> <!-- <a href="#menu">Menu</a> -->
+							<div class="header-nav-element">
+								<a href="#page-wrapper" class="blue-on-hover">Home</a>
+							</div>
+							<div class="header-nav-element">
+								<a href="#one" class="blue-on-hover">Games</a>
+							</div>
+							<div class="header-nav-element">
+								<a href="elements.html" class="blue-on-hover">Projects</a>
+							</div>
+							<div class="header-nav-element">
+								<a href="#footer" class="blue-on-hover">Contact</a>
+							</div>
 						</nav>
 
 					</header>
@@ -69,7 +77,7 @@
 						<section id="about-me" class="wrapper alt style1">
 							<div class="inner">
 								<h2 class="major">About me</h2>
-								<p>Hello! I am a passionate and driven C++ game programmer, who is interested in working on either gameplay, tools or engine programming.</p>
+								<p>Hello! I am a passionate and driven C++ game programmer, with a <a href="https://www.digipen.es/academics/bs-in-computer-science-in-real-time-interactive-simulation" target="_blank" class="blue-on-hover">bachelor's degree in Computer Science in Real-Time Interactive Simulation from DigiPen Institute of Technology Europe.</a> Here I developed my skills with C++, and learnt about a variety of topics related to game development such as maths, physics, AI, engine architecture etc. Now, I am looking for opportunities on either gameplay, tools or engine programming.</p>
 								<p>This webpage was created with html, css, javascript and sass, and it showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
 								<p>For any enquiries, don't hesitate and send me an email to <b>m.echeverriamajadas@gmail.com</b>. Also, check out my LinkedIn, Github or Youtube!</p>
 								<a href="https://www.linkedin.com/in/miguel-echeverria-majadas/" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
@@ -84,7 +92,18 @@
 									<a href="#" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
-										<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. It was published on Steam in May 2022.</p>
+										<p>
+											<span class="text icon solid fa-car"></span>
+											&nbspThird-person driving adventure game<br>
+											<span class="text icon solid fa-tools"></span>
+											&nbspUnreal Engine 4<br>
+											<span class="text icon solid fa-calendar-check"></span>
+											&nbsp&nbsp8 months of development<br>
+											<span class="text icon solid fa-user-plus"></span>
+											Team of 6 programmers<br>
+											<span class="text icon solid fa-gamepad"></span>
+											<a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" target="_blank">Published on Steam</a>
+										</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -96,7 +115,20 @@
 									<a href="#" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
-										<p>Seavilizations is a 3D multiplayer boat-combat game in which all the players have to fight against each other to obtain a certain number of chalices so that they can escape from the map to win.</p>
+										<p>
+											<span class="header icon solid fa-ship"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											3D multiplayer boat fighting game<br>
+											<span class="header icon solid fa-wifi"></span>
+											Split-screen and networked multiplayer<br>
+											<span class="header icon solid fa-tools"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											Custom C++ engine<br>
+											<span class="header icon solid fa-calendar-check"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											7-8 months of development<br>
+											<span class="header icon solid fa-user-plus"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											Team of 8 programmers<br>
+											<span class="header icon solid fa-gamepad"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<a href="https://games.digipen.edu/games/seavilizations" target="_blank">Published on DigiPen games gallery</a>
+										</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -108,7 +140,20 @@
 									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
-										<p>Entails is a 2D platformer, shooter game where the player must disinfect a human body. The player must go through parts of the human body, fighting both the different viruses and the body's defenses.</p>
+										<p>
+											<span class="header icon solid fa-lungs"></span>
+											2D platformer/shooter set inside the human body<br>
+											<span class="header icon solid fa-tools"></span>
+											&nbspCustom C++ engine<br>
+											<span class="header icon solid fa-calendar-check"></span>
+											&nbsp&nbsp7-8 months of development<br>
+											<span class="header icon solid fa-user-plus"></span>
+											Team of 6 programmers and 5 artists<br>
+											<span class="header icon solid fa-gamepad"></span>
+											<a href="https://games.digipen.edu/games/entails" target="_blank">Published on DigiPen games gallery</a><br>
+											<span class="header icon solid fa-award"></span>
+											&nbsp&nbsp&nbspMultiple award nominations
+										</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -124,25 +169,25 @@
 											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.jpg" alt="" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image clickable-img"><img src="images/AntColonySim.jpg" alt="" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image clickable-img"><img src="images/Raytracing.png" alt="" /></a>
 											<h3 class="major">Space Partitioning</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image clickable-img"><img src="images/NetAsteroids.png" alt="" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
