--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.jpg" alt="" /></a>
+									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.JPG" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>
@@ -184,7 +184,7 @@
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/NetAsteroids.png" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/NetAsteroids.PNG" alt="" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
