Updated form so it works properly now without "post" error.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 									<div class="field">
 										<label for="email">Email</label>
 										<input type="email" name="email" id="email" required="required" maxlength="150" />
-										<input type="hidden" name="_next" value="elements.html">
+										<input type="hidden" name="_next" value="https://Melell.github.io/elements.html">
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
