Projects section of home page updated and now finished.

--- a/index.html
+++ b/index.html
@@ -172,27 +172,24 @@
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/AntColonySim.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.jpg" alt="" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/Raytracing.png" alt="" /></a>
-											<h3 class="major">Space Partitioning</h3>
+											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.jpg" alt="" /></a>
+											<h3 class="major">Space Partitioning + GJK Collision Detection</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/NetAsteroids.PNG" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.jpg" alt="" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
 								</div>
 							</section>
 
