Creaed ShadowRacer page and removed some old comments from index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Miguel Echeverria - C++ Generalist Programmer</title>
@@ -27,7 +22,7 @@
 							<a class="header icon brands fa-youtube" id="red-icon" href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" target="_blank"></a>
 						</div>
 						
-						<nav class="header-nav-menu"> <!-- <a href="#menu">Menu</a> -->
+						<nav class="header-nav-menu">
 							<div class="header-nav-element">
 								<a href="#page-wrapper" class="blue-on-hover">Home</a>
 							</div>
@@ -44,27 +39,11 @@
 
 					</header>
 
-				<!-- Menu -->
-				<!--
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
-				-->
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><!--<span class="icon fa-gem"></span> --></div>
+							<div class="logo"></div>
 							<h2>Miguel Echeverria</h2>
 							<p>C++ Generalist Programmer</p>
 						</div>
@@ -221,15 +200,15 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="contact-item"><!--class="icon solid fa-home"-->
+								<li class="contact-item">
 									<img class="footer-icon" src="images/House.png" alt="Home Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
-								<li class="contact-item"><!--class="icon solid fa-phone"-->
+								<li class="contact-item">
 									<img class="footer-icon" src="images/Phone.png" alt=""/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
-								<li class="contact-item"><!--class="icon solid fa-envelope"-->
+								<li class="contact-item">
 									<img class="footer-icon" src="images/Email.png" alt="Email Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
@@ -240,7 +219,7 @@
 								</li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Miguel Echeverria. All rights reserved.</li><!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+								<li>&copy; Miguel Echeverria. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
