Initial description in Shadow Racer page added.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<a href="#one" class="blue-on-hover">Games</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="elements.html" class="blue-on-hover">Projects</a>
+								<a href="#four" class="blue-on-hover">Projects</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#footer" class="blue-on-hover">Contact</a>
