--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -8,7 +8,7 @@
 		<link rel="icon" href="images/Website.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload shadow-racer-banner">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -24,13 +24,16 @@
 						
 						<nav class="header-nav-menu">
 							<div class="header-nav-element">
-								<a href="index.html" class="blue-on-hover">Home</a>
+								<a href="index.html" class="blue-on-hover">Home Page</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="index.html#one" class="blue-on-hover">Games</a>
+								<a href="index.html#one" class="blue-on-hover">Project Info</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="index.html#four" class="blue-on-hover">Projects</a>
+								<a href="index.html#four" class="blue-on-hover">Screenshots</a>
+							</div>
+							<div class="header-nav-element">
+								<a href="#footer" class="blue-on-hover">My Work</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#footer" class="blue-on-hover">Contact</a>
@@ -41,7 +44,7 @@
 
 
 				<!-- Banner -->
-					<section id="banner">
+					<section id="banner" class="shadow-racer-banner">
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Shadow Racer</h2>
@@ -54,23 +57,50 @@
 
 						<!-- About me -->
 						<section id="about-me" class="wrapper alt style1">
+
 							<div class="inner">
+
 								<h2 class="major">About</h2>
 								<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover" target="_blank">It was published on Steam in May 2022 to a majority of positive reviews.</a>
                                     <br><br><a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp&nbspLink to Steam page</a>
                                 </p>
-								<p>This webpage was created with html, css, javascript and sass, and it showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
-								<p>For any enquiries, don't hesitate and send me an email to <b>m.echeverriamajadas@gmail.com</b>. Also, check out my LinkedIn, Github or Youtube!</p>
-								<a href="https://www.linkedin.com/in/miguel-echeverria-majadas/" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
-								<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
-								<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
+
+								<ul class="game-info-list">
+									<li class="game-info-item icon solid fa-tools">&nbsp&nbspUnreal Engine 4</li>
+									<li class="game-info-item icon solid fa-calendar-check">&nbsp&nbsp8 months</li>
+									<li class="game-info-item icon solid fa-user-plus">&nbsp&nbsp6 programmers</li>
+								</ul>
+
+								<section class="game-screenshots">
+									<h3 class="major">Image</h3>
+									<h4>Fit</h4>
+									<div class="box alt">
+										<div class="row gtr-uniform">
+											<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+										</div>
+									</div>
+									<h4>Left &amp; Right</h4>
+									<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+									<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat. Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui.</p>
+								</section>
+
 							</div>
+
 						</section>
 
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
+					<section id="footer" class="shadow-racer-banner">
 						<div class="inner">
 							<h2 class="major">Contact me</h2>
 							<p>If you have any doubt or want to contact me for any job opportunities, leave a message in the section below or send me an email to <b>m.echeverriamajadas@gmail.com</b>.</p>
