--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="#" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
